Fix linkLine alignment on some systems.

--- a/src/main.css
+++ b/src/main.css
@@ -92,10 +92,14 @@ a {
 
 .linkLine {
   position: relative;
-  margin-top: -1px; /* removes the hoverable top line on clip paths */
-  overflow: hidden;
+  overflow: visible;
   text-align: left;
   cursor: pointer;
+}
+
+.linkLineInner {
+  /* the 'g' is clipped on some machines without this */
+  padding-bottom: 2px;
 }
 
 .linkLineInner-base {
@@ -104,7 +108,6 @@ a {
 
 .linkLineInner-overlay {
   position: absolute;
-  top: 2px; /* removes the hoverable top line on clip paths */
   left: 0;
 }
 
